# sheathed-shouts-aim-at-crosshair

./: .gitignore  CMakeLists.txt  CMakePresets.json  MOD_SUMMARY.md  NEXUS_DESCRIPTION.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
Data/SKSE/Plugins/: SheathedShoutsAimAtCrosshair.ini
include/: Settings.h
src/: Settings.cpp  plugin.cpp
